<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="GlobalTags" Id="{66cb291c-2657-471d-8555-fecf4d93ea15}">
    <Declaration><![CDATA[VAR_GLOBAL
	//
	Start 			: BOOL;
	Reset 			: BOOL;
	Stop  			: BOOL;
	//
	StartLight		: BOOL;
	ResetLight		: BOOL;
	StopLight		: BOOL;
	//
	LevelMeter 		: INT;
	FlowMeter		: INT;
	SetPoint		: INT;
	//
	FillValve		: INT;
	DischargeValve	: INT;
	SP				: INT;
	PV				: INT;
	//
	SystemStarted	: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>